<resources>
    <string name="app_name">Tingle</string>

    <!-- Headline:-->
    <string name="headline">The Tingle App</string>
    <string name="headlineChar0">T</string>
    <string name="headlineChar1">i</string>
    <string name="headlineChar2">n</string>
    <string name="headlineChar3">g</string>
    <string name="headlineChar4">l</string>
    <string name="headlineChar5">e</string>

    <!-- Last thing added -->
    <string name="last_thing"> Collect last thing added</string>
    <string name="last_thing_text"><u><b>Last thing added:</b></u></string>

    <!-- Button -->
    <string name="heading_create">Save</string>

    <!-- Input Form -->
    <string name="what_thing">Search/Add:</string>
    <string name="what_text"></string>
    <string name="where">Location:</string>
    <string name="where_text"></string>

</resources>
