<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <!-- Headline Color(ing) -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorBlueLight"
            android:text="@string/headlineChar0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorRed"
            android:text="@string/headlineChar1"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorGreen"
            android:text="@string/headlineChar2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorBlueLight"
            android:text="@string/headlineChar3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorYellow"
            android:text="@string/headlineChar4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:typeface="serif"
            android:textSize="20dp"
            android:textColor="@color/colorGreen"
            android:text="@string/headlineChar5"/>
    </LinearLayout>

    <!-- Last thing added -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:text="@string/last_thing_text"/>

        <TextView
            android:id="@+id/last_thing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/last_thing"/>
    </LinearLayout>

    <!-- Button to add new thing -->
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/heading_create"/>

    <!-- What new thing -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingTop="13dp"
            android:paddingBottom="3dp"
            android:text="@string/what_thing"/>

        <EditText
            android:id="@+id/what_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingTop="3dp"
            android:text="@string/what_text"/>
    </LinearLayout>

    <!-- Where -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingTop="10dp"
            android:paddingBottom="8dp"
            android:text="@string/where"/>

        <EditText
            android:id="@+id/where_text"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:paddingTop="1dp"
            android:text="@string/where_text" />
    </LinearLayout>
</LinearLayout>